# atelier_cpp

./: README.md
adapter/: adapt-legacy-rectangle.cc
address_book/: address-book.cc  address-book.hh  contact-details.cc  contact-details.hh
bimap/: bimap.hh  bimap.hxx
builder/: builder.cc
cartesian_vector/: vector.cc
chain_of_responsibility/: director.cc  handler.cc  president.cc  vice-president.cc
closer_to/: closer-to.cc
cmake/: CMakeLists.txt
cmake/cipeek/: CMakeLists.txt
cmake/cipeek/src/: cipeek.cc
cmake/src/: ciutils.cc
const/: person.cc  person.hh
constexpr_factorial/: constexpr-factorial.hh
directories_infos/: file.in  read-info.cc  read-info.hh
do_not_loop/: dnl.cc  dnl.hh
doubly_linked_list/: list.cc  node.cc
engine/: engine.cc  engine.hh  motor-cycle.cc  motor-cycle.hh  motor-truck.cc  motor-truck.hh  vehicle.cc  vehicle.hh
equal_pairs/: pair.hh
exception/: game.cc  invalid-argument.cc  player.cc
exist_functor/: exist.hh  exist.hxx
find_optional/: find-optional.cc
for_each/: for-each.hh
forward_multiplication/: forward-multiplication.cc
game_theory/: lambdas.cc  test-game-theory.cc
hello_world/: hello-world.cc
implements/: implements  implements.hh
int_container/: int-container.cc  main.cc
is_numerical/: algorithm.hh  is-numerical.hh
is_prime/: is-prime.hh
merge_sort/: merge-sort.cc
my_nfts/: auction.cc  main.cc  nft.hxx  person.cc  person.hh
parse_csv/: parse-csv.cc  parse-csv.hh
path/: path.cc  unix-path.cc  unix-path.hh  windows-path.cc  windows-path.hh
point/: Point.cc  Point.hh  main.cc
(+37 files in other folders)
